--- a/lab5/styles.css
+++ b/lab5/styles.css
@@ -284,7 +284,7 @@ input {
 .capitais-page nav a:active {
     color: #ffcc00; /* Cor do link ativo */
 }
-.home-link {
+.capitais-page .home-link {
     background-color: #5e307c; /* Cor de fundo diferente para o último link */
     color: white; /* Cor do texto do último link */
     border-radius: 5px; /* Cantos arredondados para o último link */
@@ -300,12 +300,105 @@ input {
 }
 
 .capitais-page article {
-    height: 100vh; /* Altura de cada artigo */
-    background: orange; /* Cor de fundo do primeiro artigo */
-    display: flex; /* Usar flex para centralizar o texto */
+    width: 100vw; /* Largura total da viewport */
+    height: 50vh; /* Altura de 50% da viewport */
+    display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3em; /* Tamanho do texto */
+    text-align: center;
+}
+
+.capitais-page #poema {
+    background-color: lightblue; /* Cor de fundo do artigo Poema */
+}
+
+.capitais-page #paisagem {
+    width: 100vw; /* O artigo ocupa toda a largura da janela */
+    height: 100vh; /* A altura será baseada no conteúdo */
+}
+
+.imagem-container {
+    position: relative; /* Definimos position: relative para que o conteúdo posicionado dentro use essa referência */
+    width: 100vw; /* A imagem ocupa toda a largura da janela */
+    overflow: hidden; /* Esconder o excesso, se houver */
+}
+
+.imagem-container img {
+    width: 100vw; /* A imagem ocupa toda a largura da janela */
+    height: 100vh;
+   
+}
+
+.imagem-container .credit {
+    position: absolute; /* Posição absoluta dentro do container relativo */
+    bottom: 10px; /* Alinha 10px acima do fundo */
+    right: 10px; /* Alinha 10px à esquerda da borda direita */
+    color: white; /* Cor branca para o texto */
+    background-color: #000000ad;
+    padding: 5px 10px; /* Adiciona espaçamento ao redor do texto */
+    font-size: 2em; /* Tamanho do texto */
+    border-radius: 5px; /* Bordas arredondadas */
+}
+
+.imagem-container .credit a {
+    color: white; /* Cor do link */
+    text-decoration: none; /* Remove sublinhado do link */
+}
+
+.imagem-container .credit a:hover {
+    text-decoration: underline; /* Sublinhado ao passar o mouse */
+}
+
+.capitais-page #cidades {
+    background-color: orange; /* Cor de fundo para Cidades */
+    
+}
+/* Article cidades */
+.capitais-page #cidades {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 colunas com largura igual */
+    grid-template-rows: repeat(3, 1fr); /* 3 linhas com altura igual */
+    gap: 5px; /* Espaçamento entre os itens */
+    height: 100vh; /* Mantém a altura em 100% da viewport */
+    padding: 100px;
+    background-color: #5e307c;
+    align-items: center
+}
+
+.capitais-page #cidades section {
+    display: flex;
+    flex-direction: row; /* Disposição horizontal (lado a lado) */
+    align-items: center;
+    background-color: #fff;
+    width: 35vh;
+    border-radius: 10px;
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2);
+    padding: 0px;
+    overflow: hidden; /* Para garantir que o conteúdo não extrapole */
+}
+
+.capitais-page #cidades img {
+    width: 150px;
+    height: 100px;
+    object-fit: cover; /* Mantém a proporção da imagem */
+    border-radius: 0px;
+    margin-bottom: 0px;
+}
+
+.capitais-page #cidades div {
+    font-size: 1.2em;
+    background-color: #fff;
+    color: #000;
+    padding: 20px;
+    width: 10%;
+    text-align: center;
+    border-radius: 0px ;
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2);
+}
+
+.capitais-page #cidades section:hover div {
+    background-color: #eee; /* Muda a cor do fundo ao passar o mouse */
+    transition: background-color 0.3s;
 }
 
 .capitais-page article:last-child {
